2008-10-28  Frank Ch. Eigler  <fche@elastic.org>

	PR6964, from Wenji Huang <wenji.huang@oracle.com>:
	* mainloop.c (start_cmd, stp_main_loop): Temporarily
	disable ptrace calls.

2008-10-15  Frank Ch. Eigler  <fche@elastic.org>

	* mainloop.c (start_cmd): Fix wordexp error handling.

2008-09-18  David Smith  <dsmith@redhat.com>

	PR 6903.
	* staprun_funcs.c (check_permissions): Instead of checking the
	effective uid, check the real uid for root permissions.

2008-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* mainloop.c (start_cmd): Rewrite to use wordexp/execvp/ptrace.
	(stp_main_loop): Use ptrace detach to resume target process.

2008-09-05  Frank Ch. Eigler  <fche@elastic.org>

	* staprun.c (run_as): Teach it to exec too.  Update callers.
	Always do set[ug]id as dictated.
	* staprun.h (do_cap): Remove.  Update all callers.
	* staprun_funcs.c: Ditto.
	* cap.c: Removed.  Update headers.

2008-07-10  Frank Ch. Eigler  <fche@elastic.org>

	PR 6736.
	* common.c (send_request): Move here ...
	* mainloop.c: from here.
	* staprun.c (send_relocations): New function to send kernel
	and module relocation bases to probe module.
	* staprun.h: Corresponding changes.

2008-06-03  Frank Ch. Eigler  <fche@elastic.org>

	PR 6429.
	* mainloop.c (stp_main_loop): Remove STP_UNWIND message support.

2008-05-05  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (child_proc): Handle sig_chld
	in the proper thread.
	(signal_thread): Don't call send_request()
	because it isn't thread-safe.

2008-05-05  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (signal_thread): New thread to handle signals
	better.
	(setup_main_signals): Create signal thread.

2008-04-30  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 6008
	* common.c (parse_args): Increase the limitation of the buffer size
	to 4095MB.
	* common.c (usage): Ditto.

2008-04-30  Masami Hiramatsu  <mhiramat@redhat.com>

	* stapio.c (main): Fix a typo in a debug message.
	* staprun.c (main): Ditto.
