@@ -1,3 +1,11 @@
+2008-11-12  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR6964 redux.
+	* mainloop (WORKAROUND_BZ467568): New macro to control
+	behavior.
+	(start_cmd, stp_main_loop): Use signal/pause-based
+	synchronization as a fallback for rhbz 467568.
+
 2008-10-28  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR6964, from Wenji Huang <wenji.huang@oracle.com>:
